# Hangman

./: Cargo.toml  OpenLocalHost.py  README.md  run.py
Assets/: Index.html  Style.css  UsernameInput.js  index.html  scripts.js  style.css
src/: main.rs
