[package]
name = "hangman"
version = "0.1.1"
authors = ["HyperCube <0hypercube@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = ">=1.6.0", features = ["attributes"] }
serde = { version = ">=1.0", features = ["derive"] }
